--- a/css/style.css
+++ b/css/style.css
@@ -2,5 +2,72 @@ body {
     width: 100vw;
     height: 100vh;
     margin: 0;
-    overflow: hidden;
+    margin-left:auto;
+    margin-right:auto;
+  
+    font-family: 'Roboto', sans-serif;
   }
+
+  main {
+    padding:3em;
+  }
+
+section  {
+  
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
+
+}
+
+
+  .logo {
+    display: flex;
+    justify-content: flex-start;
+    font-size: 5em;
+    color:#911C1C; 
+    
+  }
+nav {
+  display: flex;  
+  box-sizing: border-box;
+  width:100%;
+}
+ul {
+  display: flex;
+ justify-content: center;
+  box-sizing: border-box;
+  font-size: 1em;
+ width:100%;
+  
+  gap:0.5em;
+  
+    
+}
+
+.tags {
+
+  text-decoration: none;
+  color:#911C1C;  
+  font-weight: 500;
+  list-style:none;
+  border:solid #C4C4C4 1px;  
+  border-radius:2em; 
+  padding:0.5em;
+  padding-left:1em;
+  padding-right:1em;
+  cursor:pointer;
+}
+li:hover {
+  transform:scale(1.2);
+}
+.accueil {
+  display:flex;
+  box-sizing: border-box;
+  justify-content: flex-end;
+  white-space: nowrap;
+  color:#911C1C;
+  font-size:2.5em;
+ 
+}
