--- a/css/style.css
+++ b/css/style.css
@@ -4,7 +4,7 @@ body {
     margin: 0;
     margin-left:auto;
     margin-right:auto;
-  
+    font-size:1em;
     font-family: 'Roboto', sans-serif;
   }
 
@@ -17,7 +17,7 @@ section  {
   display: flex;
   justify-content: center;
   align-items: center;
-
+  margin-left:1em;
 
 }
 
@@ -31,6 +31,7 @@ a{
   .logo {
     display: flex;
     justify-content: flex-start;
+   
     font-size: 5em;
     color:#911C1C; 
     
@@ -78,6 +79,14 @@ ul {
   font-weight:400;
  
 }
+@media screen and (max-width:1542px) {
+ .logo_index{
+   font-size:3em;
+  }
+ .accueil{
+   font-size:1.5em;
+ }
+}
 
 @media screen and (max-width: 1200px) {
 
@@ -87,7 +96,7 @@ ul {
   section {
     
     flex-wrap: wrap;
-    justify-content: flex-start;
+    justify-content: space-between;
     
   }
 
@@ -100,11 +109,12 @@ ul {
 }
 
 .accueil {
-
-  margin-left:4.5em;
+  font-size:2.5em;
 }
-.logo {
+
+#logo_index {
   margin-left:0.5em;
+  font-size:5em;
 }
 }
 
@@ -139,19 +149,5 @@ clear:both;
 
 
 
-.carousel__next, .carousel__prev {
-  width:100px;
-  height :100px;
- 
-  background-image: url(../button.png);
-  background-repeat: no-repeat;
-  background-size:100px 100px;
-  cursor: pointer;   
- position:absolute;
- z-index:2;
- 
-}
 
-.carousel__prev{
-  transform:rotateY(180deg)
-}
+
