--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,5 @@
 body {
-    width: 100vw;
-    height: 100vh;
+   
     margin: 0;
     margin-left:auto;
     margin-right:auto;
@@ -14,17 +13,22 @@ body {
   }
   main.index {
     
-    margin:6em;
-    margin-top:1em;
+    margin:10em;
+    margin-top:5em;
   }
 
 section  {
   
   display: flex;
   justify-content: center;
+  gap:5em;
+ font-size:1em;
+ box-sizing: border-box;
+ width:100%;
+  align-items: center; 
+ margin-top:2em;
  
-  align-content: center; 
- margin:2em;
+ 
 
 }
 svg {
@@ -42,8 +46,9 @@ a{
   .logo {
     display: flex;
     justify-content: flex-start;
+    box-sizing: border-box;    
     align-items: center;
-    font-size: 5em;
+    font-size: 3.5em;
     color:#901C1C; 
     font-weight: 500;
   
@@ -53,16 +58,17 @@ a{
 
   
 nav {
-  display: flex;  
+  display: flex; 
   box-sizing: border-box;
   width:100%;
 }
 ul {
+  padding:0;
   display: flex;
  justify-content: center;
  align-items: center;
   box-sizing: border-box;
-  font-size: 1em;
+  font-size: 0.75em;
  width:100%;
   
   gap:0.5em;
@@ -71,7 +77,7 @@ ul {
 }
 
 .tags {
-
+  
   text-decoration: none;
   color:#901C1C;  
   font-weight: 500;
@@ -93,24 +99,34 @@ ul {
   justify-content: flex-end;
   white-space: nowrap;
   color:#901C1C;
-  font-size:2.5em;
+  font-size:2em;
   font-weight:400;
+  align-self: center;
  
 }
-@media screen and (max-width:1542px) {
- .logo_index{
-   font-size:3em;
-  }
- .accueil{
-   font-size:1.5em;
+@media screen and (max-width:1400px) {
+  
+ .logo{
+   font-size:2.5em;
  }
+  .ul {
+    font-size: 0.8em;
+  }
+  .accueil {
+    font-size: 1.5em;
+  }
+ 
 }
 
 @media screen and (max-width: 1200px) {
 
   main {
     padding-left:0;
+    margin:6em;
   }
+  main.index {
+    
+    margin:6em;}
   section {
     
     flex-wrap: wrap;
@@ -128,6 +144,10 @@ ul {
 
 .accueil {
   font-size:2.5em;
+}
+
+.logo{
+  font-size:5em;
 }
 
 #logo_index {
